# test

./: .gitignore  BUILD_WINDOWS_GUIDE.md  DEPLOYMENT_README.md  DOWNLOAD_INSTRUCTIONS.md  FINAL_CLEANUP_SUMMARY.md  GET_WINDOWS_EXE_GUIDE.md  INTELLIGENT_UPGRADE_PLAN.md  Makefile  OPTIMIZATION_SUMMARY.md  PERSONAL_INTELLIGENT_PLAN.md  PROJECT_STRUCTURE.md  README.md  README_zh-CN.md  WINDOWS_EXECUTABLE_SOLUTION.md  build_exe.py  build_simple.sh  build_windows_exe.bat  check_project.py  create_windows_python_package.py  demo.py  demo_advanced.py  demo_intelligent_features.py  demo_phase0_implementation.py  demo_phase1_ml_integration.py  demo_phase1_mock_ml.py  demo_phase2_realtime.py  demo_phase3_ui_revolution.py  main_app.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_executive_report.md  setup.py  version_info.txt
.github/workflows/: build-windows.yml
android_log_analyzer/: README.md  __init__.py  __main__.py  advanced_parser.py  config.py  log_analyzer.py  sprd_analyzer.py  test_log_analyzer.py  utils.py
android_log_analyzer/intelligent/: __init__.py  priority_scorer.py  report_generator.py  smart_search.py
android_log_analyzer/ml/: __init__.py
android_log_analyzer/ml/models/: anomaly_detector.py  crash_classifier.py  pattern_recognizer.py
android_log_analyzer/streaming/: __init__.py  realtime_monitor.py
android_log_analyzer/streaming/collectors/: adb_collector.py
log_analyzer_gui/: .gitignore  README.md  README_zh-CN.md  electron_bootstrap.js  main_gui.py  package-lock.json  package.json
log_analyzer_gui/web/: main.html  script.js  style.css
modern_ui/: package.json
tests/: __init__.py  test_config.py
(+2 files in other folders)
